--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~10.2.5",
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "~10.2.5",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^10.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
